tests/snapshots/run_wpt_conformance__trtx_scatterND_1D_float32_tensors_by_non-negative_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "scatterND.https.any.js",
    "scatterND 1D float32 tensors by non-negative indices",
    "trtx",
    "PASS",
)
